[package]
name = "mongo-redis-cache-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
anyhow = "1.0"
serde_json = "1.0"

mongodb = { version = "2.0.0-beta.2", default-features = false, features = ["tokio-runtime"] }
redis = { version = "0.21", features = ["tokio-comp", "tokio-native-tls-comp"] }
serde = { version = "1.0", default-features = false }
futures-util = "0.3.16"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["rt", "macros", "time"] }
tokio-test = "*"